--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -15,3 +15,5 @@ commands:
     description: "Send a private message"
   r:
     description: "Reply to the last private message"
+  spawn:
+    description: "Spawn coordinates"
