--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,7 @@ main: com.bojarsky.pmessage.Pmessage
 api-version: '1.20'
 authors: [bojarsky]
 description: Private Messages
+depend: [NBTAPI]
 commands:
   msg:
     description: "Send a private message"
@@ -17,3 +18,9 @@ commands:
     description: "Reply to the last private message"
   spawn:
     description: "Spawn coordinates"
+  pmreload:
+    description: "Reloads the plugin configuration"
+  starteritems:
+    description: "Starter items"
+
+
